<resources>
    <string name="app_name">LoadEase</string>

    <string name="move_arround">Move around quickly</string>


    <string name="welcome_loadease">Welcome to LoadEase</string>
    <string name="sign_in">Sign in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Save">Save</string>
    <string name="email">Email*</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="welcome_back_to_loadease">Welcome back to LoadEase</string>
    <string name="keep_me_on_logged_in">Keep me on logged in</string>
    <string name="standard_charges_may_apply">Standard charges may apply</string>
    <string name="phone_no">Phone no</string>
    <string name="industry">Industry</string>
    <string name="get_started_with_loadease">Get started with LoadEase</string>
    <string name="phone_Number">Phone Number</string>
    <string name="sign_Up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="_1050_00">1050.00</string>
    <string name="_4111_5222_6451_1287"> 4111 5222 6451 1287</string>
    <string name="todo">TODO</string>
    <string name="google_direction_api">AIzaSyCFMRJrFq6OajUBDKd42R3t783B0-Rbzdg</string>
    <string name="wallet">Wallet</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mm_yy">MM / YY</string>
    <string name="cvc">CVC</string>
    <string name="_3_4_digits"> 3/4 Digits</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="mr_usama">Mr.usama</string>
    <string name="don_t_have_an_account">Dont have an Account ?</string>
    <string name="send_otp">Send OTP</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="add_card">Add Card</string>
    <string name="hi_arsal">Hi, Arsal</string>
    <string name="we_would_love_to_know_more_about_you">We would love to know more about you.</string>
    <string name="loadease_require_your_name_email_and_cell_phone_number">LoadEase require your name,email and cell phone number</string>
    <string name="please_proide_these_details_for_a_better_experience_and_get_notification">Please proide these details for a better experience and get notification</string>
    <string name="password">Password</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend">Resend</string>

</resources>