<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/bg_signup"
    tools:context=".ProfileActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginHorizontal="10dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.4"
        android:layout_marginStart="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="8.5"
        android:layout_weight="2.9"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/cardview_background"
        android:orientation="vertical"
        android:paddingRight="10dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            tools:ignore="NestedWeights" />






        <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="60dp"
            android:gravity="center"
            android:background="@drawable/bg_wallet"
            android:layout_weight="1.2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/_1050_00"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/lightgray"
            android:textSize="17sp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.19"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1.5"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.67"
                android:layout_marginHorizontal="10dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_card_number"
                    android:textColor="@color/lightgray"
                    android:textSize="20sp"
                    />


            </LinearLayout>


            <EditText
                android:background="@drawable/background_ed_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:maxLines="1"
                android:textColorHint="@color/hint_color"
                android:hint="@string/_4111_5222_6451_1287"
                android:layout_marginHorizontal="10dp"
                 android:inputType="number"
                android:textColor="@color/lightgray"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                tools:targetApi="o"
                android:importantForAutofill="no" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1.7"
            android:layout_weight="1.6"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/lightgray"
                    android:textSize="17sp"
                    android:text="@string/expiry_date"/>


                <EditText
                    android:background="@drawable/background_ed_txt"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:maxLines="1"
                    android:textColorHint="@color/hint_color"
                    android:hint="@string/mm_yy"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/lightgray"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    tools:targetApi="o"
                    android:importantForAutofill="no" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:orientation="vertical">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:textColor="@color/lightgray"
                    android:textSize="17sp"
                    android:text="@string/cvc"/>


                <EditText
                    android:background="@drawable/background_ed_txt"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:maxLines="1"
                    android:textColorHint="@color/hint_color"
                    android:hint="@string/_3_4_digits"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/lightgray"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeTextType="uniform"
                    tools:targetApi="o" />


            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1.5"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.67"
                android:layout_marginHorizontal="12dp"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardholder_name"
                    android:textColor="@color/lightgray"
                    android:textSize="20sp"
                    />


            </LinearLayout>



            <EditText
                android:background="@drawable/background_ed_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:maxLines="1"
                android:textColorHint="@color/hint_color"
                android:hint="@string/mr_usama"
                android:layout_marginHorizontal="10dp"
                android:inputType="textPersonName"
                android:textColor="@color/lightgray"
                android:autoSizeMaxTextSize="15sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeTextType="uniform"
                tools:targetApi="o"
                android:importantForAutofill="no" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"/>

        <LinearLayout
            android:id="@+id/add_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"

            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:background="@drawable/bg_wallet"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/add_card"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>







    </LinearLayout>

</LinearLayout>