<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/bg_signup"
    >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>


    <LinearLayout
        android:id="@+id/back_press"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginHorizontal="10dp"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
       android:layout_marginHorizontal="10dp"
        android:layout_weight="0.2"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_arsal"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/we_would_love_to_know_more_about_you"
            android:textColor="@color/white"
            android:textSize="23sp"/>






    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:weightSum="6"
        android:background="@drawable/cardview_background"
        android:orientation="vertical"
        >



        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:gravity="center">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:cardElevation="10dp"
                android:layout_weight="3"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/loadease_require_your_name_email_and_cell_phone_number"
                        android:textStyle="bold"
                        android:textColor="@color/lightgray"
                        android:textSize="20sp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"/>

                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/please_proide_these_details_for_a_better_experience_and_get_notification"
                        android:textColor="@color/lightgray"
                        android:textSize="17sp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="8dp"/>

                    <LinearLayout
                        android:id="@+id/save_setting"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="30dp"

                        android:gravity="center"
                        android:background="@drawable/background_card_view"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/Save"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>