<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/truck_blue_sign_up"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:textSize="30sp"
        android:text="@string/welcome_loadease"
        android:gravity="center"
        android:textColor="@color/lightgray"/>

<LinearLayout
    android:id="@+id/sign_in"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="60dp"
    android:layout_marginLeft="60dp"
    android:gravity="center"
    android:background="@drawable/background_card_view"
    android:layout_weight="0.5">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:text="@string/sign_in"
      android:textStyle="bold"
      android:textSize="20sp"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:weightSum="3">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1.8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:gravity="center"
                android:textSize="15sp"

                android:textColor="@color/lightgray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:gravity="center">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/lightgray"/>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="horizontal"
        android:weightSum="5">



    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/botttom_shape"
        tools:ignore="NestedWeights" />

            <ImageView

                android:id="@+id/facebook_img"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:src="@drawable/facebook_imge"/>

            <ImageView
                android:id="@+id/twitter_img"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:src="@drawable/twitter_img"/>

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="0dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:src="@drawable/google_img"/>

    </LinearLayout>

</LinearLayout>