<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/bg_signup"
    tools:context=".ProfileActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.25"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="0.4"
        android:layout_marginStart="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.7"
        android:weightSum="6"
        android:paddingLeft="10dp"
        android:background="@drawable/cardview_background"
        android:orientation="vertical"
        android:paddingStart="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back_to_loadease"
                android:textSize="23sp"
                android:textColor="@color/lightgray"
                android:textStyle="bold"
                android:layout_gravity="center"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">


            <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_defaultNameCode="PK"
                app:ccp_backgroundColor="@color/white"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/lightgray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_me_on_logged_in"
                android:textSize="17sp"
                android:textColor="@color/lightgray"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:gravity="center"
            android:background="@drawable/background_card_view"
            android:layout_weight="0.9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Send OTP"
                android:textStyle="bold"
                android:textSize="23sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightgray"
            android:text="Standard charges may apply"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textSize="17sp"/>



    </LinearLayout>

</LinearLayout>